// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package estimate;

message ID {
  string ID = 1;
}

message Empty {}

message Estimate {
  string ID = 1;
  string title = 2;
  string description = 3;
  string customer = 4;
  string customerID = 5;
}

message ListResponse {
  repeated Estimate items = 1;
}

message CreateResponse {
  string ID = 1;
}

service EstimateService {
  rpc Create (Estimate) returns (CreateResponse) {}
  rpc GetAll (Empty) returns (ListResponse) {}
  rpc GetOne (ID) returns (Estimate) {}
  rpc DeleteOne (ID) returns (Empty) {}
}
